--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-GoogleAnalytics
 
 {{$NEXT}}
+  - Fixes dependency list (GH: #1)
 
 1.003  2013-08-27 00:45:52 EDT
 	- Support sub-domains
